made changes in the about page and added investment page

--- a/about.html
+++ b/about.html
@@ -28,12 +28,12 @@
                 </div>
                 <ul class="nav-menu" id="navMenu">
                     <li><a href="index.html" class="nav-link">Home</a></li>
-                    <li><a href="#who-we-are" class="nav-link">Who We Are</a></li>
+                    <!-- <li><a href="#who-we-are" class="nav-link">Who We Are</a></li>
                     <li><a href="#ecosystem" class="nav-link">Ecosystem</a></li>
                     <li><a href="#impact" class="nav-link">Impact</a></li>
                     <li><a href="#traction" class="nav-link">Traction</a></li>
                     <li><a href="#contact" class="nav-link">Contact</a></li>
-                </ul>
+                </ul> -->
             </nav>
         </div>
     </header>
@@ -44,10 +44,10 @@
             <div class="hero-overlay"></div>
             <div class="container">
                 <div class="hero-content">
-                    <h1 class="hero-title">Inside Ausum Group</h1>
-                    <p class="hero-subtitle">A new chapter in African lifestyle is being written — one that fuses
+                    <h1 class="hero-title">Destrupting Normal, Designing Legacy</h1>
+                    <!-- <p class="hero-subtitle">A new chapter in African lifestyle is being written — one that fuses
                         cultural authenticity, cutting-edge innovation, and holistic entrepreneurship. Here's how Ausum
-                        Group is building it.</p>
+                        Group is building it.</p> -->
                 </div>
             </div>
         </section>
@@ -56,174 +56,130 @@
         <section class="vision section" id="who-we-are">
             <div class="container">
                 <div class="section-header">
-                    <h2 class="section-title">A Bold Response to a Growing Market</h2>
+                    <h2 class="section-title">Beyond Survival</h2>
                     <div class="accent-line"></div>
                 </div>
                 <div class="vision-content">
                     <div class="vision-text">
-                        <p class="vision-intro">Founded in Nairobi, Kenya, Ausum Group is driven by a vision that looks
-                            far beyond the conventional. We're creating a new African lifestyle narrative — The Ausum
-                            Life — focused on clarity, ownership, and Afro-modern self-expression.</p>
-                        <p>In a market characterized by outdated models and a lack of premium, culturally resonant
-                            options, we've identified a unique opportunity to serve the rising African middle class with
-                            authentic, world-class brands.</p>
-                        <blockquote class="quote vision-quote">
-                            <p>"We saw limitations not as obstacles, but as profound opportunities to redefine African
-                                lifestyle."</p>
-                            <cite>— Dennis Musau, Founder</cite>
-                        </blockquote>
-                    </div>
-                    <div class="vision-image">
-                        <img src="https://images.pexels.com/photos/2422294/pexels-photo-2422294.jpeg"
-                            alt="people in a meeting" class="img-responsive" />
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- Ecosystem Section -->
-        <section class="ecosystem-detailed section" id="ecosystem">
-            <div class="container">
-                <div class="section-header">
-                    <h2 class="section-title">A Multi-Pillar Strategy for Scalable Impact</h2>
-                    <p class="section-subtitle">Strategically designed ecosystem built to address multiple facets of
-                        African lifestyle and innovation</p>
-                    <div class="accent-line"></div>
-                </div>
-                <div class="ecosystem-grid">
-                    <div class="ecosystem-card">
-                        <div class="ecosystem-icon" data-icon="appeals">🕶️</div>
-                        <h3>Ausum Appeals Ltd.</h3>
-                        <h4>Redefining Personal Expression</h4>
-                        <p>Premium, fashion-forward eyewear with an Afrocentric retail experience.</p>
-                        <ul class="ecosystem-features">
-                            <li>AI-powered try-ons</li>
-                            <li>Tele-optometry services</li>
-                            <li>Lifestyle studios in development</li>
-                        </ul>
-                    </div>
-
-                    <div class="ecosystem-card">
-                        <div class="ecosystem-icon" data-icon="nexus">⚙️</div>
-                        <h3>Ausum Nexus Ltd.</h3>
-                        <h4>Strategic Innovation & SME Empowerment</h4>
-                        <p>Empowering African entrepreneurship through scalable frameworks.</p>
-                        <ul class="ecosystem-features">
-                            <li>Venture development</li>
-                            <li>SME consulting</li>
-                            <li>Business blueprinting</li>
-                        </ul>
-                    </div>
-
-                    <div class="ecosystem-card">
-                        <div class="ecosystem-icon" data-icon="studios">🎥</div>
-                        <h3>Ausum Studios</h3>
-                        <h4>Media Engine of the Ecosystem</h4>
-                        <p>Producing digital & brand content that drives growth across pillars.</p>
-                        <ul class="ecosystem-features">
-                            <li>Visual storytelling</li>
-                            <li>Brand development</li>
-                            <li>Content strategy</li>
-                        </ul>
-                    </div>
-
-                    <div class="ecosystem-card">
-                        <div class="ecosystem-icon" data-icon="just">💬</div>
-                        <h3>Just Ausum</h3>
-                        <h4>Purpose & Cultural Connection</h4>
-                        <p>Building community around the Ausum Life.</p>
-                        <ul class="ecosystem-features">
-                            <li>Inspirational platform</li>
-                            <li>Cultural content</li>
-                            <li>Community building</li>
-                        </ul>
+                        <p class="vision-intro"><strong>In the restless pulse of Nairobi’s innovation scene, a quiet
+                                struggle
+                                unfolds daily.</strong>
+                            Behind the bold ideas and boundless talent lies the African founder—driven by vision, yet
+                            burdened by a
+                            stark reality: the constant tension between building a solution the world needs and simply
+                            making enough
+                            of a living to survive our harsh economic reality let alone thrive.
+                        </p>
+                        <p>It’s a journey of brilliance stifled by broken systems, where too many dreamers are forced to
+                            choose
+                            between personal survival and the very mission they were born to fulfill.
+                        </p>
+                        <p>We know this story because we have lived it. We’ve seen brilliant energy—our own and that of
+                            our
+                            peers—diverted from building world-class solutions to the fundamental pursuit of basic
+                            needs. This isn't
+                            just a challenge; it's a bottleneck on our continent's potential. The primary culprit is a
+                            lack of accessible
+                            capital, compounded by a deficit in the structures needed to build scalable businesses.
+                        </p>
+                        <p>Ausum Group was born from a refusal to accept this reality. We were compelled to answer a
+                            simple,
+                            powerful question: What if we could build a system designed to release founders from this
+                            burden?
+                            Our answer is an ecosystem built for a purpose. It starts with walking the talk.</p>
                     </div>
                 </div>
             </div>
         </section>
 
-        <!-- Impact Section -->
-        <section class="impact section" id="impact">
+        <!-- Walking the Talk -->
+        <section class="vision section" id="who-we-are">
             <div class="container">
                 <div class="section-header">
-                    <h2 class="section-title">More Than Products — A Lifestyle Movement</h2>
-                    <div class="accent-line"></div>
-                </div>
-                <div class="impact-content">
-                    <div class="impact-highlights">
-                        <div class="impact-card">
-                            <h3>Cultural Pride</h3>
-                            <p>Positioning eyewear as a symbol of identity and cultural pride</p>
-                        </div>
-                        <div class="impact-card">
-                            <h3>Tech-Driven</h3>
-                            <p>Blending Afro-luxury aesthetics with technological convenience</p>
-                        </div>
-                        <div class="impact-card">
-                            <h3>Community</h3>
-                            <p>Shaping culture through content and community building</p>
-                        </div>
-                    </div>
-                    <div class="testimonials">
-                        <div class="testimonial">
-                            <p>"Ausum isn't just a brand, it's a statement of who we are as modern Africans."</p>
-                            <cite>— Sarah K., Early Customer</cite>
-                        </div>
-                        <div class="testimonial">
-                            <p>"Finally, a vision that truly understands and celebrates African identity."</p>
-                            <cite>— James M., Brand Partner</cite>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- Traction Section -->
-        <section class="traction section" id="traction">
-            <div class="container">
-                <div class="section-header">
-                    <h2 class="section-title">A Strategic Foundation — Built to Scale</h2>
-                    <div class="accent-line"></div>
-                </div>
-                <div class="journey-timeline">
-                    <div class="timeline-phase">
-                        <h3>Phase 1: Foundation</h3>
-                        <ul>
-                            <li>Proven eyewear operations</li>
-                            <li>Market validation</li>
-                            <li>Initial partnerships</li>
-                        </ul>
-                    </div>
-                    <div class="timeline-phase">
-                        <h3>Phase 2: Growth</h3>
-                        <ul>
-                            <li>E-commerce expansion</li>
-                            <li>Pop-up retail launch</li>
-                            <li>Ecosystem development</li>
-                        </ul>
-                    </div>
-                    <div class="timeline-phase">
-                        <h3>Phase 3: Scale</h3>
-                        <ul>
-                            <li>Pan-African expansion</li>
-                            <li>Global partnerships</li>
-                            <li>Full ecosystem integration</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- Vision Forward Section -->
-        <section class="vision-forward section">
-            <div class="container">
-                <div class="section-header">
-                    <h2 class="section-title">Africa, Reimagined — Globally Resonant</h2>
+                    <h2 class="section-title">Walking The Talk</h2>
                     <div class="accent-line"></div>
                 </div>
                 <div class="vision-content">
-                    <p class="vision-intro">This is more than our story; it's an invitation to see the world
-                        differently... and to co-create a future where African ingenuity and style inspire globally.</p>
+                    <div class="vision-text">
+                        <p class="vision-intro">We launched <strong>Ausum Appeals</strong>, our fashion-forward eyewear
+                            brand, not just
+                            to fill a gap for culturally
+                            resonant, premium products, but to serve as our economic engine. It’s our proof of concept—a
+                            demonstration that by blending Afro-modern style with tech-driven convenience, we can build
+                            a profitable,
+                            scalable brand from the ground up. The early revenue has been incredibly encouraging,
+                            validating our
+                            belief that there is an appetite for what we're building.
+                        </p>
+                        <p>But this is only half of the story. The autonomy we build for ourselves is the blueprint we
+                            share with
+                            others. Through <strong>Ausum Nexus</strong> , we provide the strategic frameworks that
+                            founders need to
+                            scale.
+                            Through <strong>Ausum Studios</strong>, we craft the narratives that shape culture and
+                            connect with a global
+                            audience.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Invitation -->
+        <section class="vision section" id="who-we-are">
+            <div class="container">
+                <div class="section-header">
+                    <h2 class="section-title">Invitation</h2>
+                    <div class="accent-line"></div>
+                </div>
+                <div class="vision-content">
+                    <div class="vision-text">
+                        <p class="vision-intro"><strong>This is more than a company—it’s a call to reimagine what’s
+                                possible.</strong>
+                            We’re building a future where African founders are free to chase purpose, not just survival.
+                            Where our creativity, culture, and innovation don’t follow trends—they define them.
+                            This is the rise of self-defined modernity.
+                            This is the Ausum Life.
+                            This is our story. It’s an invitation to build, to partner, and to co-create that future
+                            with us.
+                            Welcome to Ausum Group.</p>
+                    </div>
+                </div>
+                <blockquote class="quote personal-quote">
+                    <p>"If you want to go fast go alone, if you want to go far, go together"</p>
+                    <cite>— African Proverb</cite>
+                </blockquote>
+            </div>
+        </section>
+        <!-- Founder -->
+        <section class="mission section" id="mission">
+            <div class="container">
+                <div class="section-header">
+                    <h2 class="section-title">Founder</h2>
+                    <div class="accent-line"></div>
+                </div>
+                <div class="mission-content">
+                    <div class="mission-image">
+                        <img src="/dennis-ceo-ausum - Copy - Copy.jpg" alt="CEO of Ausum Group" class="img-responsive">
+                    </div>
+                    <div class="mission-text">
+                        <h3>About the Founder</h3>
+                        <p>For over a decade, Dennis Musau lived the hustle—one shaped by grit, humility, and hands-on
+                            survival from a shopkeeper, service station manager, bakery runner, mall operator, sales
+                            rep,
+                            makeshift accountant. One job after another. Not glamorous. But deeply human. And quietly
+                            preparing him for something greater.</p>
+                        <p> The turning point? Four years in the eyewear industry, rising from a merchandiser to account
+                            manager at a global company. That journey unlocked a truth: <strong> corporate path isn’t
+                                always
+                                the calling—especially when your soul burns to build what doesn’t yet exist.</strong>
+                        </p>
+                        <p><strong>Ausum Group </strong> was born from that tension. From lived experience. From knowing
+                            how it feels to
+                            have more vision than capital. More ideas than opportunities. And still daring to believe.
+                            It’s a platform shaped by faith, resilience, and the quiet conviction that Africa doesn’t
+                            lack
+                            talent—it lacks belief, backing, and systems that allow builders to thrive.</p>
+                    </div>
                 </div>
             </div>
         </section>
