--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
         <ul class="nav-menu" id="navMenu">
           <li><a href="#hero" class="nav-link">Home</a></li>
-          <li><a href="#about" class="nav-link">About</a></li>
+          <li><a href="#about" class="nav-link">Vision</a></li>
           <li><a href="#mission" class="nav-link">Mission</a></li>
           <li><a href="#ecosystem" class="nav-link">Ecosystem</a></li>
           <li><a href="#traction" class="nav-link">Traction</a></li>
@@ -46,12 +46,9 @@
       <div class="hero-overlay"></div>
       <div class="container">
         <div class="hero-content">
-          <h1 class="hero-title">Crafting a new vision for African lifestyle</h1>
-          <p class="hero-subtitle">A bold, creative, and unapologetically African journey to reimagine lifestyle,
-            business, and culture.</p>
-          <div class="hero-cta">
-            <a href="#about" class="btn btn-secondary" style="width: 50%;">Learn More</a>
-          </div>
+          <h1 class="hero-title">The Ausum Life</h1>
+          <p class="hero-subtitle">Building a lifestyle ecosystem where culture meets commerce-blending African
+            authenticity with modern design, digital influence and scalable business models.</p>
         </div>
       </div>
     </section>
@@ -60,7 +57,7 @@
     <section class="about section" id="about">
       <div class="container">
         <div class="section-header">
-          <h2 class="section-title">Our Story</h2>
+          <h2 class="section-title">Our Vision</h2>
           <div class="accent-line"></div>
         </div>
         <div class="about-content">
@@ -69,13 +66,8 @@
               creativity, innovation, and entrepreneurial spirit. We're building brands that embody our continental
               heritage while solving everyday challenges.</p>
             <blockquote class="quote">
-              <p>"It always seems impossible until it's done."</p>
-              <cite>— Nelson Mandela</cite>
-            </blockquote>
-            <blockquote class="quote personal-quote">
-              <p>"Africa doesn't need charity. Africa needs vision, innovation, and the courage to build its own
-                future."</p>
-              <cite>— Dennis Musau, Founder</cite>
+              <p>"Until the Lions have thier own historians, the history of the hunt will always glorify the hunter"</p>
+              <cite>— Chinua Achebe</cite>
             </blockquote>
           </div>
           <div class="about-image">
@@ -120,7 +112,6 @@
       </div>
     </section>
 
-    <!-- Ecosystem Section -->
     <!-- Ecosystem Section -->
     <section class="ecosystem section" id="ecosystem">
       <div class="container">
@@ -208,16 +199,9 @@
                 <p>Eyewear revenue generated in just 8 months</p>
               </li>
               <li>
-                <span class="traction-highlight">Ausum Appeals</span>
-                <p>Retail brand launch in progress</p>
-              </li>
-              <li>
-                <span class="traction-highlight">Digital Content</span>
-                <p>Podcast & inspirational content in development</p>
-              </li>
-              <li>
                 <span class="traction-highlight">Key Partnerships</span>
-                <p>Brand expert, CFA, videographer, China sourcing network</p>
+                <p>Brand Development Expert, Certified Financial Ananylst, Videographer & Editor, Developer, China
+                  sourcing network</p>
               </li>
               <li>
                 <span class="traction-highlight">Market Validation</span>
@@ -230,43 +214,36 @@
               <div class="milestone">
                 <div class="milestone-dot"></div>
                 <div class="milestone-content">
-                  <h4>2022 Q4</h4>
-                  <p>Concept development & initial market research</p>
+                  <h4>2024 H2</h4>
+                  <p>- Established Ausum Nexus</p>
+                  <p>- Client Onboarding</p>
+                  <p>- Pleminary sales with whole sale model</p>
                 </div>
               </div>
               <div class="milestone">
                 <div class="milestone-dot"></div>
                 <div class="milestone-content">
-                  <h4>2023 Q1</h4>
-                  <p>First eyewear collection launch</p>
+                  <h4>2025 H1</h4>
+                  <p>- Established our vision with measurable progress</p>
+                  <p>- Set the stage for strategic patnership and funding</p>
                 </div>
               </div>
               <div class="milestone">
                 <div class="milestone-dot"></div>
                 <div class="milestone-content">
-                  <h4>2023 Q3</h4>
-                  <p>Ksh 500,000 revenue milestone</p>
-                </div>
-              </div>
-              <div class="milestone">
-                <div class="milestone-dot"></div>
-                <div class="milestone-content">
-                  <h4>2023 Q4</h4>
-                  <p>Ecosystem expansion planning</p>
-                </div>
-              </div>
-              <div class="milestone">
-                <div class="milestone-dot active"></div>
-                <div class="milestone-content">
-                  <h4>2024 Q2</h4>
-                  <p>Funding round & brand expansion</p>
+                  <h4>2025 H2</h4>
+                  <p>- Actively fundraising to scale Ausum Appeals</p>
+                  <p>- Initiating foundational development for our supporting ecosystem pillars
+                    (Nexus, Studios, Just Ausum)</p>
                 </div>
               </div>
               <div class="milestone">
                 <div class="milestone-dot future"></div>
                 <div class="milestone-content future">
-                  <h4>2024 Q4</h4>
-                  <p>Multi-brand launch & scale</p>
+                  <h4>2026 (Strategic Goal)</h4>
+                  <p>Aggressively scale towards achieving
+                    10x current revenue by , fully activate all ecosystem pillars
+                  </p>
                 </div>
               </div>
             </div>
@@ -276,43 +253,28 @@
     </section>
 
     <!-- Why Invest Section -->
-    <section class="invest section" id="invest">
+    <section class="mission section" id="invest">
       <div class="container">
         <div class="section-header">
-          <h2 class="section-title">Why Invest</h2>
-          <p class="section-subtitle">Accelerating the Ausum Engine</p>
+          <h2 class="section-title">Invest In Ausum Group</h2>
           <div class="accent-line"></div>
         </div>
-        <div class="invest-content">
-          <div class="invest-goal">
-            <div class="invest-amount">
-              <span class="currency">Ksh</span>
-              <span class="amount">2,000,000</span>
-            </div>
-            <p>Funding Goal</p>
-            <div class="progress-container">
-              <div class="progress-bar" style="width: 35%;">
-                <span class="progress-text">35%</span>
-              </div>
-            </div>
+        <div class="mission-content">
+          <div class="mission-image">
+            <img src="https://images.pexels.com/photos/590011/pexels-photo-590011.jpeg?auto=compress&cs=tinysrgb&w=600"
+              alt="Vision and planning" class="img-responsive">
           </div>
-          <div class="invest-details">
-            <h3>What Your Investment Supports</h3>
-            <ul class="invest-list">
-              <li>Inventory expansion across product lines</li>
-              <li>Brand development and marketing campaigns</li>
-              <li>Content creation infrastructure</li>
-              <li>E-commerce platform enhancement</li>
-              <li>Team expansion in key areas</li>
-            </ul>
-            <div class="invest-cta">
-              <a href="#benefits" class="btn btn-primary">Become a Founding Contributor</a>
-            </div>
+          <div class="mission-text">
+            <p>Invest in Ausum Group
+              With growing traction, a scalable model, and a clear path to 10x revenue growth by 2026, this is your
+              chance to back a brand that’s redefining what it means to live, look, and lead the Ausum Life.
+            </p>
+            <p>Your investment fuels more than returns-it powers transformation</p>
+            <a href="/invest.html" class="btn btn-tertiary">Explore Investment Opportunity</a>
           </div>
         </div>
       </div>
     </section>
-
     <!-- Benefits Section -->
     <section class="benefits section" id="benefits">
       <div class="container">
