added a contact page

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <li><a href="#ecosystem" class="nav-link">Ecosystem</a></li>
           <li><a href="#traction" class="nav-link">Traction</a></li>
           <li><a href="#invest" class="nav-link">Invest</a></li>
-          <li><a href="#contact" class="nav-link">Contact</a></li>
+          <li><a href="/contact.html" class="nav-link">Contact</a></li>
         </ul>
       </nav>
     </div>
@@ -117,7 +117,7 @@
       <div class="container">
         <div class="section-header">
           <h2 class="section-title">Our Ecosystem</h2>
-          <p class="section-subtitle">The 5 Pillars of Ausum</p>
+          <p class="section-subtitle">The 4 Pillars of Ausum</p>
           <div class="accent-line"></div>
         </div>
         <div class="pillar-container">
@@ -373,7 +373,6 @@
   </footer>
 
   <script src="js/main.js" type="module"></script>
-  <script></script>
 </body>
 
 </html>
